<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Events</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="terrain">Terrain</string>
    <string name="go">Go</string>
    <string name="prompt_location">Location:</string>
    <string name="map_info">Map information</string>
    <string name="my_location">My Location</string>
    <string name="enter_your_desired_username_">Enter your desired username!</string>
    <string name="create_event">Create Event</string>
    <string name="map_type">Map Type</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="title_activity_create">Create</string>

</resources>
